Máscaras na tela de RAT Ajustes visuais na tela de RAT Envio de e-mail ao enviar a RAT

--- a/css/alerta.css
+++ b/css/alerta.css
@@ -2,6 +2,7 @@ div.modal.modal-alerta.in button {
     position: absolute;
 
     right: 35px;
+    bottom: 10px;
 }
 .modal-alerta .modal-content {
     background: transparent;
