Tela Consulta Atividades

--- a/css/tabela.css
+++ b/css/tabela.css
@@ -1,6 +1,8 @@
+tfoot {font-weight:bold;}
 .highlight { background-color: #e4e4e4; }
-.digitado { color: violet; }
+
+/*.digitado { color: violet; }
 .enviado { color: blue; }
 .aprovado { color: green; }
 .faturado { color: yellow; }
-.reprovado { color: red; }
+.reprovado { color: red; }*/
